--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -17,13 +17,12 @@ html {
 	box-sizing: inherit;
 }
 
-
-body{
+body {
   font-family: sans-serif;
   @include zero;
   // Hides close button if there is no js
     &.noscript .close-btn,
-    &.noscript .toggle-btn{
+    &.noscript .toggle-btn {
     display: none;
   }
 }
@@ -33,4 +32,39 @@ header {
   position: relative;
 }
 
+.toggle-btn {
+    position: absolute;
+    right: 1em;
+    top: 0;
+}
 
+.navigation ul {
+    @include zero;
+    li {
+        list-style-type: none;
+        a {
+            display: block;
+            padding: .5em 1em;
+            text-align: center;
+            border-bottom: 1px solid $light-grey;
+            text-decoration: none;
+        }
+        &:first-child a{
+            border-top: 1px solid $light-grey;
+        }
+    }
+}
+    
+.toggle-btn,
+    .close-btn {
+        color: red;
+        height: 40px;
+        width: 40px;
+        i {
+            border: 1px solid blue;
+            padding: .5em;
+        }
+            span {
+                @include hide-text;
+            }
+    }
