feat(css): styling
added colour, borders, spacing, and font styles to css

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,4 +6,5 @@
 @import "components/push-menu-custom";
 @import "components/main";
 
-// Vendor
+// Fonts
+@import url(http://fonts.googleapis.com/css?family=Bonbon);
