--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -8,10 +8,10 @@ html {
 	box-sizing: border-box;
 	-moz-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
+    -o-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 	text-size-adjust: 100%;
 }
-
 
 *, *:before, *:after {
 	box-sizing: inherit;
@@ -27,14 +27,18 @@ body {
   }
 }
 
+h1 {
+    font-family: $bonbon;
+}
+    
 header {
-  padding: 0 1em;
-  position: relative;
+    padding: 0 1rem;
+    position: relative;
 }
 
 .toggle-btn {
     position: absolute;
-    right: 1em;
+    right: 1rem;
     top: 0;
 }
 
@@ -44,27 +48,107 @@ header {
         list-style-type: none;
         a {
             display: block;
-            padding: .5em 1em;
+            padding: .5rem 1rem;
             text-align: center;
-            border-bottom: 1px solid $light-grey;
+            border-bottom: 2px dotted $main-color;
             text-decoration: none;
         }
         &:first-child a{
-            border-top: 1px solid $light-grey;
+            border-top: 2px dotted $main-color;
+        }
+        :hover {
+            color: #E60A6F;
         }
     }
 }
     
 .toggle-btn,
     .close-btn {
-        color: red;
+        color: $main-color;
         height: 40px;
         width: 40px;
         i {
-            border: 1px solid blue;
+            border: 2px solid $main-color;
+            border-radius: 3px;
             padding: .5em;
+            padding-top: .7rem;
         }
             span {
                 @include hide-text;
             }
     }
+
+
+// Sliding Navigation
+
+@media only screen and (max-width: 60em){
+    .site-wrapper {
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        z-index: 100;
+        .sliding-canvas {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            transform: translateX(0);
+            @include ease(all, 300ms, ease-in-out);
+        
+        } // sliding canvas
+    
+    &[data-state="slide-open"] .sliding-canvas {
+             transform: translateX(-100%); 
+             margin: .7rem;
+    }
+        
+        &[data-state="slide-open"] {
+                overflow: visible; // alows nav to extend past window view
+    }
+    
+    } // closing site-wrapper
+    
+    .slide-menu {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        bottom: 0;
+        right: -100%;
+        min-height: 600px; 
+        
+    }
+  
+} // closing media query -
+
+
+@media only screen and (min-width: 60em){
+    .toggle-btn,
+    .close-btn {
+        display: none;
+    }
+    .slide-menu {
+        position: static;
+        right: auto;
+        text-align: center;
+        li {
+            display: inline-block;
+            padding: 0 2rem;
+        }
+    }
+
+    .navigation ul {
+        border-top: 2px dotted $main-color;
+        border-bottom: 2px dotted $main-color;
+        li {
+        a { 
+        border-bottom: none;
+        }
+        &:first-child a {
+        border-top: none;
+        }  
+        }
+    }
+}
+
+
+
